# derclou

./: CMakeLists.txt  README.md  theclou.h
anim/: sysanim.c  sysanim.h
assets/icons/macos/: clou.icns
assets/icons/windows/: clou.rc
assets/linux/: clou.desktop
base/: base.c  base.h
cdrom/: cdrom.c
data/: dataappl.c  dataappl.h  database.c  database.ph
dialog/: dialog.c  talkappl.c
gameplay/: gp.c  gp.h  gp_app.c  loadsave.c
gfx/: gfx.c  gfx.h  gfx.ph  gfxnch4.c
inphdl/: inphdl.c
landscap/: access.c  hardware.c  init.c  landscap.c  landscap.ph  spot.c
list/: list.c
living/: bob.h  living.c  living.ph
organisa/: display.c  organisa.c
planing/: io.c  planer.c  prepare.h  support.c  sync.c  system.h
present/: interac.c  present.c  presenta.c
scenes/: evidence.c  invest.c
sound/: fmopl.c  fx.c  hsc.c  newsound.c  newsound.h
src/: theclou.h
src/anim/: sysanim.c
src/base/: base.c  base.h
src/cdrom/: cdrom.c  cdrom.h
src/data/: database.c
src/data/objstd/: tcdata.h
src/dialog/: dialog.c  talkappl.c
src/disk/: disk.c
src/gameplay/: gamefunc.h  gp_app.c  loadsave.c
src/gfx/: gfx.c  gfx.h  gfxnch4.h
src/inphdl/: inphdl.c  inphdl.h
src/landscap/: init.c  landscap.c  landscap.ph  scroll.c  spot.c
src/living/: bob.c  living.h  living.ph
src/planing/: guards.c  main.h  player.c  prepare.c  sync.c  system.c
src/random/: random.c
src/scenes/: done.c  evidence.c  inside.c  scenes.c
src/sound/: fx.c  fx.h
src/story/: story.c
src/text/: text.c
story/: story.c
